--- a/practice/barbarian/style.css
+++ b/practice/barbarian/style.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -101,4 +101,4 @@ figure img{
 .lower_div .lower_text{
     text-transform: uppercase;
     font-size: 11px;
-} */
+}
