--- a/lecture_13_UI_VS/style.css
+++ b/lecture_13_UI_VS/style.css
@@ -29,6 +29,7 @@ body,html{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    outline:none;
 }
 /* btn default styling */
 .btn{
@@ -37,6 +38,7 @@ body,html{
     width: 35%;
     border-radius: 4px;
     border: none;
+    outline: none;
 }
 .btn.new{
     color: black;
@@ -58,12 +60,12 @@ body,html{
 .file-explorer{
     height: 100%;
     background: inherit;
-    width: 30%;
+    width: 25%;
     overflow-y: auto;
 }
 
 .content{
-    width: 70%;
+    width: 72%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -71,10 +73,19 @@ body,html{
 }
 .textbox{
     height: 69%;
-    border: 1px solid;
+    /* border: 1px solid; */
+    box-shadow: 0 1rem 3rem rgb(49, 47, 47);
+    
+
 }
-.terminal{
+
+.terminal-container{
     height: 28%;
+    /* overflow: auto; */
+    width:100%;
+    box-shadow: 0 1rem 3rem rgb(140, 94, 185);
+    position: relative;
+    z-index:3;
     /* border: 1px solid blue; */
 }
 /* scroll height width */
@@ -118,4 +129,25 @@ box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.363);
 }
 .tab-name{
 
+}
+
+/* .xterm .xterm-viewport{
+    overflow-y:auto;
+    }
+.xterm .xterm-viewport{
+overflow-y:visible;
+} */
+
+.terminal{
+    height: 100%;
+    overflow: auto;
+    width:100%;
+    /* border: 1px solid blue; */
+}
+/* how to override  */
+.jstree-default .jstree-clicked {
+    background: inherit;
+}
+.jstree-default .jstree-hovered {
+    background: inherit;
 }
